# shopping-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  PRIVACY.md  README.md  pyproject.toml
app/: __init__.py  config.py  logging_config.py  main.py  processing.py  worker.py
app/db/: __init__.py  repository.py  session.py
app/domain/: __init__.py  models.py  schemas.py
app/handlers/: __init__.py  commands.py  interactions.py  messages.py
app/queue/: __init__.py  base.py  factory.py  memory.py  redis_queue.py
app/services/: __init__.py  lists.py  media.py  parser.py  transcription.py  whatsapp.py
docs/: index.html
scripts/: simulate_webhook.py  try_parser.py  try_transcribe.py
tests/: conftest.py  test_lists.py  test_repository.py
