[project]
name = "shopping-bot"
version = "0.1.0"
description = "Hebrew shopping-list WhatsApp bot for couples/families"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pywa[fastapi]>=2.6",
    "anthropic>=0.39",
    "sqlalchemy>=2.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "redis>=5.0",
    "psycopg[binary]>=3.2",
    "openai>=1.40",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
